k8s/monitoring/jaeger/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: streamforge

spec:
  replicas: 1

  selector:
    matchLabels:
      app: jaeger

  template:
    metadata:
      labels:
        app: jaeger

    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:latest

          ports:
            - containerPort: 16686   # UI
            - containerPort: 4317    # OTLP gRPC
            - containerPort: 4318    # OTLP HTTP
