k8s/monitoring/jaeger/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: streamforge

spec:
  selector:
    app: jaeger

  ports:
    - name: ui
      port: 16686
      targetPort: 16686

    - name: otlp-grpc
      port: 4317
      targetPort: 4317

    - name: otlp-http
      port: 4318
      targetPort: 4318

  type: ClusterIP
