k8s/monitoring/jaeger/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: jaeger-ingress
  namespace: streamforge

spec:
  ingressClassName: nginx

  rules:
    - host: jaeger.streamforge.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: jaeger

                port:
                  number: 16686
